--- a/moinda-api/src/main/resources/templates/fragment/header.html
+++ b/moinda-api/src/main/resources/templates/fragment/header.html
@@ -18,6 +18,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="/css/styles.css" rel="stylesheet" />
+    <script src="/js/common.js"></script>
   </head>
 
   <body id="page-top" th:fragment="page-top">
